[package]
name = "web_hook"
version = "0.1.0"
authors = ["andy@ycn.cc"]
description = "Hook anything from web"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sha2 = "0.10"
base64 = "0.13.0"
log = "0.4"
json = "0.12"
env_logger = "0.9"
chrono = "0.4"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.5"